--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/MySite/style/main.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/fonts.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/font-svg.css">
     <title>MySite</title>
 </head>
 <body>
-    <section>
-<nav>
-<div class="menu">
-    <li>O mnie</li>
-    <li>Projekty</li>
-    <li>Kontakt</li> 
-    
+    <header class="header">
+        <div class="header_top">
+            <div class="container">
+                <div class="header_contacts">
+                <a class="header_phone" href="tel:+48791764737">+48 791 764 737</a>
+                <a class="header_email" href="#">kyrylokondrashov@gmail.com</a>
+                <a class="header_btn" href="#">Darmowa konsultacja !</a>
+            </div>
+            </div>
+        </div>
+        <div class="header_content">
+            <div class="container">
+                <div class="header_content-inner">
+        <div class="header_logo">
+            <a href="#">
+                <img src="img/logo.png" alt="">
+            </a>
+        </div>
+    <nav class="menu">
+        <ul>
+            <li><a href="#">O mnie</a></li>
+            <li><a href="#">Projekty</a></li>
+            <li><a href="#">Kontakt</a></li>
+        </ul>
+    </nav>
 </div>
-
-</nav>
-
-    </section>
+    </div>
+</div>
+    </header>
 </body>
 </html>
