--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="header_contacts">
                 <a class="header_phone" href="tel:+48791764737">+48 791 764 737</a>
                 <a class="header_email" href="#">kyrylokondrashov@gmail.com</a>
-                <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Darmowa konsultacja !</a>
+                <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Pobrać CV </a>
             </div>
             </div>
         </div>
@@ -31,10 +31,10 @@
         </div>
     <nav class="menu">
         <ul>
-            <li><a href="#">O mnie</a></li>
-            <li><a href="#">Umiejętności</a></li>
-            <li><a href="#">Projekty</a></li>
-            <li><a href="#">Kontakt</a></li>
+            <li class="menuStyle" id="aboutMe">O mnie</id=></li>
+            <li class="menuStyle" id="skills">Umiejętności</a></li>
+            <li class="menuStyle" id="projects">Projekty</a></li>
+            <li class="menuStyle" id="contacts">Kontakt</a></li>
         </ul>
     </nav>
 </div>
@@ -128,7 +128,31 @@
 </section>
 
 
-
+<footer class="contact">
+    <div class="container">
+        <div class="contact_content">
+    <div class="contact_text">
+    <h1>Kyrylo Kondrashov</h1>
+    <p><a href="tel:+48791764737">+48 791 764 737</a></p>
+    <p>kyrylokondrashov@gmail.com</p>
+    </div>
+<div class="contact_social">
+    <div class="social_box"><a href="https://api.whatsapp.com/send?phone=+48791764737"><img src="/img/whatsApp.png" alt="WhatsApp"></a></div>
+    <div class="social_box"><a href="https://t.me/kondrashovk"><img src="/img/Telegram.png" alt="telegram"></a></div>
+    <div class="social_box"><a href="https://github.com/whisperlolz">
+    <svg viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55
+        -.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
+        -.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89
+        -3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2
+        -.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 
+        0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013
+         8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
+        </a></div>
+</div>
+</div>
+</div>
+</footer>
 
 
 <!-- OKNO -->
@@ -136,12 +160,16 @@
         <div class="window_ank">
             <div class="window_ank_text">
                 <h1>Aloha ! </h1>
-                <p>Spodobalo się moję portfolio - napisz do mnie ! </p>
-                <div class="window_ank_log">
-                    <img src="/img/tproger.jpg" alt="#">
-                </div>
+                <p>Jeżeli spodobalo się moję portfolio lub chcesz moje CV - nacisnij "Pobierz" ! </p>
             </div>
-
+            <div class="window_ank_log">
+                <img src="/img/tproger.jpg" alt="#">
+            </div>
+            <a href="https://drive.google.com/file/d/1RPjSkXTcCoKhh3GnbQA-9DeAHaFMhGkG/view?usp=sharing">
+    <div class="window_ank_btn">
+        <p>Pobierz CV</p>
+    </div>
+    </a>
         </div>
       </div>
 <!-- JS -->
