--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/media.css">
     <link rel="stylesheet" href="/css/font-svg.css">
     <title>Kyrylo Kondrashov</title>
 </head>
@@ -30,18 +31,34 @@
             </a>
         </div>
     <nav class="menu">
+        <div class="menu_big">
         <ul>
             <li class="menuStyle" id="aboutMe">O mnie</id=></li>
             <li class="menuStyle" id="skills">Umiejętności</a></li>
             <li class="menuStyle" id="projects">Projekty</a></li>
             <li class="menuStyle" id="contacts">Kontakt</a></li>
         </ul>
+    </div>
+    <div class="hamburger_wrapper">
+        <div class="hamburger">
+            
+        </div>
+    </div>
     </nav>
 </div>
     </div>
 </div>
     </header>
-
+<!-- 
+    <div class="hamburger_menu">
+        <ul>
+            <li class="menuStyle" id="aboutMe">O mnie</id=></li>
+            <li class="menuStyle" id="skills">Umiejętności</a></li>
+            <li class="menuStyle" id="projects">Projekty</a></li>
+            <li class="menuStyle" id="contacts">Kontakt</a></li>
+        </ul>
+    </div>
+     -->
 <section class="welcome">
     <div class="container">
         <div class="welcome_content">
@@ -66,8 +83,6 @@
 
 <section class="aboutMe">
     <div class="container">
-    <div class="aboutMe_content">
-        
         <div class="aboutMe_text">
             <h1>O mnie</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -84,10 +99,6 @@
                  sed maiores nam maxime quae explicabo porro nesciunt quibusdam in rerum placeat,
                  accusamus dolore!</p>
         </div>
-        <div class="aboutMe_photo">
-            <img src="/img/myPhoto.jpg" alt="#">
-        </div>
-    </div>
     </div>
 </section>
 
