--- a/index.html
+++ b/index.html
@@ -96,19 +96,10 @@
     <div class="container">
         <div class="aboutMe_text">
             <h1>O mnie</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                 Doloribus id voluptas quod autem, qui neque! Quibusdam 
-                 totam odit saepe dolore! Molestiae illum sit magnam hic? 
-                 Delectus minima deserunt maiores quibusdam eligendi, 
-                 quisquam vel sed velit optio fugit vero consequuntur 
-                 obcaecati corporis iusto quia doloribus quidem, itaque 
-                 blanditiis voluptates? Culpa perferendis facere architecto 
-                 veniam pariatur dolor odio possimus dolorem in aliquid. 
-                 Reprehenderit aut autem expedita adipisci magnam alias suscipit 
-                 sequi harum rerum illo? Nostrum animi porro dolor officia ipsum? 
-                 Veritatis repudiandae error pariatur, a repellat suscipit architecto, 
-                 sed maiores nam maxime quae explicabo porro nesciunt quibusdam in rerum placeat,
-                 accusamus dolore!</p>
+            <p>Od dawna interesuje Mnie programowanie! Obecnie jestem studentem trzeciego roku Informatyki.
+                W 2020r. skończyłem kurs <strong>HTML Academy - "JavaScript Professional Development of Web Interfaces"</strong>
+                Staram się rozwijać i podejmować nowę wezwania. Zacząłem samodzielną nauke React Redux.
+ </p>
         </div>
     </div>
 </section>
@@ -123,10 +114,10 @@
             </div> 
             <div class="skills_text">
                 <h1>Moje Umiejętności</h1>
-                <p>Narazie razwijam swoje Umiejętności Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Quae ab dicta quod neque. Sunt officiis magni similique aliquid, tempora iusto ut laudantium 
-                    quis! Ratione suscipit corrupti officia dolorem commodi, magni nulla culpa 
-                    vitae, voluptatum possimus explicabo repudiandae, dignissimos consequatur facilis!</p>
+                <p>Narazie razwijam swoje Umiejętności! Staram się używać poprawnego kodu i coraz bardziej
+                    się rozwijać. Na dzień obecny moje umiętności to : HTML5, CSS3, JavaScript, Photoshop , Figma - średnie poziom,
+                    React, Sass - początkujący poziom.
+                </p>
             </div>
                        
         </div>
@@ -192,7 +183,7 @@
             <div class="window_ank_log">
                 <img src="/img/tproger.jpg" alt="#">
             </div>
-            <a href="https://drive.google.com/file/d/1RPjSkXTcCoKhh3GnbQA-9DeAHaFMhGkG/view?usp=sharing">
+            <a href="https://drive.google.com/file/d/1gOdOej-mKL2bBT5FnC7z-2oTP8kjLgqr/view?usp=sharing">
     <div class="window_ank_btn">
         <p>Pobierz CV</p>
     </div>
