--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h1>O mnie</h1>
             <p>Od dawna interesuje Mnie programowanie! Obecnie jestem studentem trzeciego roku Informatyki.
                 W 2020r. skończyłem kurs <strong>HTML Academy - "JavaScript Professional Development of Web Interfaces"</strong>
-                Staram się rozwijać i podejmować nowę wezwania. Zacząłem samodzielną nauke React Redux.
+                Zacząłem samodzielną nauke React Redux. Staram się rozwijać i podejmować nowę wezwania. 
  </p>
         </div>
     </div>
