--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
             
             <div class="projects_content_box">
                 
-            <div class="projects_box"><a href="https://whisperlolz.github.io/webDis/"><img src="/img/weDesign.jpg" alt="W krótce"></a></div>
-            <div class="projects_box"><a href="https://whisperlolz.github.io/uber/"><img src="/img/page5.JPG" alt="#"></a></div>
-            <div class="projects_box"><a href="#"><img src="/img/wkrótce.png" alt="#"></a></div>
+            <div class="projects_box"><a href="https://whisperlolz.github.io/webDis/"><img src="/img/weDesign.jpg" alt="weDesign"></a></div>
+            <div class="projects_box"><a href="https://whisperlolz.github.io/uber/"><img src="/img/page5.JPG" alt="Uber"></a></div>
+             <div class="projects_box"><a href="https://whisperlolz.github.io/americanWatch/"><img src="/img/americanWatch.jpg" alt="americanWatch"></a></div>
             <div class="projects_box"><a href="#"><img src="/img/wkrótce.png" alt="#"></a></div>
             <div class="projects_box"><a href="#"><img src="/img/wkrótce.png" alt="#"></a></div>
             <div class="projects_box"><a href="#"><img src="/img/wkrótce.png" alt="#"></a></div>
